--- a/app/views/catalog/category.html.haml
+++ b/app/views/catalog/category.html.haml
@@ -55,7 +55,7 @@
                 - if p.photos.exists?
                   = image_tag p.photos.first.file.url(:m)
               %p.obj_info_mini
-                .tag
+                .tag.tag-red
                   Цена:
                   = p.price.round
               - if p.text
