--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -127,4 +127,4 @@
                           Цена:
                           %span= n.price
                           p.
-                        .btn.btn-success.add_to_shopping_cart В корзину
+                        .btn.btn-success.add_to_shopping_cart{:data => {:id => n.id}} В корзину
