--- a/app/views/basket/order.html.haml
+++ b/app/views/basket/order.html.haml
@@ -3,7 +3,8 @@
     .tottal_text
       Общая сумма вашего заказа:
     .order_form.validate
-      %form.form-horizontal{:action => "", :method => "POST"}
+      %form.form-horizontal#form-order-go{:action => "/basket/go", :method => "POST"}
+        %input{:type => "hidden", :name => "order_id", :value => @order.id}
         %fieldset
           .control-group.section
             %label.control-label{:for => "name"} Ваше имя
@@ -42,15 +43,14 @@
             .controls
               %input#username.span2{:name => "order[room]", :placeholder => "", :type => "text"}
               %span.alert.alert-error.hide.call-order-error-name не менее 2 букв
-          -#.control-group.section
-            %label.control-label{:for => "phone"} Полный адресс доставки
+          .control-group.section
+            %label.control-label{:for => "text"} Комментарии
             .controls
-              %textarea#address.span6{:name => "textarea"}
-              %span.alert.alert-error.hide.call-order-error-name Ввведите адрес куда нужно доставить мебель (свободная форма)
+              %textarea#address.span6{:name => "order[text]"}
   .span2.forms_block_ri
     .tottal.green
-      = @order.summ
+      = @order.sum.to_i
       %span
         р
-    %button.btn.btn-success.btn-block.btn-large.order_issue_btn.disabled.subm Оформить
+    %button.btn.btn-success.btn-block.btn-large.order_issue_btn.disabled.subm{:onclick => "$('#form-order-go').submit();"} Оформить
     %a.btn.btn-block.back_btn{:href => "/basket"} Назад
