--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -105,6 +105,9 @@ h4.title
   .span8.options ul
     margin: 0
     padding: 0
+    li
+      .phone_number
+        font-size: 24px
   .logo
     position: relative
     top: 0px
@@ -464,12 +467,19 @@ ul.social
 
       width: 30px
 .text_block
+  a
+    .tag
+      margin: 0 11px
+      width: 77%
   p
     padding: 0 15px
     overflow: hidden
     img
       float: left
       margin: 0 25px 10px 10px
+.catalog_list_nth
+  .span3:nth-child(4n+1)
+    clear: right
 
 
 .shopping_cart_content
@@ -949,7 +959,7 @@ p.price span.red
   text-decoration: none
   width: 87%
   margin-bottom: 10px
-  font-size: 21px
+  font-size: 20px
 
   &:hover
 
