--- a/app/views/catalog/category.html.haml
+++ b/app/views/catalog/category.html.haml
@@ -37,7 +37,7 @@
         %span.divider /
       %li.active Шкафы
 
-.row
+.row.catalog_list_nth
   - if @products
     - @products.each do |p|
       .span3
