--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
             %li.pad
               |
             %li
-              %a{:href => "call:+78008888888", :title => ""} 8 (800) 888 88-88
+              %a.phone_number{:href => "call:+78008888888", :title => ""} 8 (800) 888 88-88
             %li.pad
               |
             %li
