--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -469,8 +469,8 @@ ul.social
 .text_block
   a
     .tag
-      margin: 0 11px
-      width: 77%
+      margin: 0 15px
+      width: 75%
   p
     padding: 0 15px
     overflow: hidden
@@ -479,7 +479,7 @@ ul.social
       margin: 0 25px 10px 10px
 .catalog_list_nth
   .span3:nth-child(4n+1)
-    clear: right
+    clear: left !important
 
 
 .shopping_cart_content
@@ -1003,3 +1003,5 @@ p.price span.red
   background-color: rgb(228, 92, 33) !important
   &:after
     border-color: transparent transparent transparent rgb(228, 92, 33) !important
+.viewport
+  overflow: hidden
