--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -991,6 +991,8 @@ p.price span.red
 .tag.tag-big
   font-size: 28px
   margin-bottom: 15px
+  padding: 8px 5px 12px 5px
+  width: 92%
   &:before
     margin: 0
     top:  -4px
