--- a/app/views/catalog/product.html.haml
+++ b/app/views/catalog/product.html.haml
@@ -15,7 +15,7 @@
     %h2.clear-margin-top
       = @product.name
     .tag.tag-big
-      12 500p.
+      от (цена 1 категории) p.
 
       -#%span.label.label-important
         По акции
@@ -23,7 +23,7 @@
         Распродажа
       -#%span.label.label-info
         Новый
-    %button.btn.btn-success.btn-block.buy_img Заказать как на картинке
+
 
     - if @product.text
       - prms = @product.text.split "\r\n"
@@ -63,18 +63,20 @@
   .span7
 
 
+    %button.btn.btn-success.btn-block.buy_img Цена изделия на картинке (цена категории которая выставлена картинке). Заказать как на картинке
+    %span.label.label-info.btn-block Ткань 4 категории. Основная - вот такая ткань. Компаньон - вот такая ткань
     %ul.thumbnails
       - if @product.photos.exists?
         - @product.photos.each_with_index do |f, k|
           - if k == 0
-            %li.span6
+            %li.span7
               %a.thumbnail{:href => "javascript:;"}
                 %img{:alt => "", :src => f.file.url(:x), :width => '100%'}/
           - else
             %li.span2
               %a.thumbnail{:href => "javascript:;"}
                 %img{:alt => "", :src => f.file.url(:m), :width => '100%'}/
-    %span.alert.alert-info.btn-block Ткань 4 категории. Основная - вот такая ткань. Компаньон - вот такая ткань
+
 //.row
 //  %button.btn.btn-success.btn-large.span12{:href => 'javascript:;'} В корзину
 
