--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -857,72 +857,51 @@ p.price span.red
     margin-bottom: 0
 .buy_img
   margin: 0
-.cloth_cont
-  position: fixed
-  top: 15%
-  right: -252px
-  padding: 0 5px
-  background: rgba(255,255,255,0.9)
-  border: 1px solid rgb(222, 222, 222)
-  width: 300px
-  z-index: 500
-  -webkit-box-shadow: -3px 3px 20px rgba(50, 50, 50, 0.75)
-  -moz-box-shadow:    -3px 3px 20px rgba(50, 50, 50, 0.75)
-  box-shadow:         -3px 3px 20px rgba(50, 50, 50, 0.75)
-  .cloth_box
-    width: 100%
-
-    padding: 5px
-    border-bottom: 1px solid rgb(222, 222, 222)
-    padding: 5px  0
-    a
-      display: block
-      float: left
-      margin-right: 10px
-      width: 50px
-      height: 50px
-      overflow: hidden
-    p
-      font-size: 14px
-      span
-        color: rgb(145, 193, 19) !important
-      &:last-child
-        margin-bottom: 0
-    span
-      display: block
-      font-size: 14px
-  .zero_b
-
-  .fr_b
-    display: none
-    margin-left: 350px
-    height: 0
-  .sec_b
-    display: none
-    margin-left: 350px
-    height: 0
-    border-bottom: none !important
-  form
-    margin-bottom: 0
-    input
-      margin: 5px 0
-  .arr_left_box
+.cloth_cont_box
+  position: relative
+  .cloth_cont
     position: absolute
-    left: -30px
-    top: -1px
-    width: 30px
-    height: 30px
-    text-align: center
-    line-height: 31px
-    font-size: 16px
-    color: #333333
-    background: rgba(255,255,255,0.9)
-    -webkit-border-radius: 10px 0 0 10px
-    -moz-border-radius: 10px 0 0 10px
-    border-radius: 10px 0 0 10px
-    border: 1px solid rgb(222, 222, 222)
-    border-right: none
-    cursor: pointer
+    top: 0
+    right: 0
+    left: 0
+    .cloth_box
+      width: 100%
+
+      padding: 5px
+      border-bottom: 1px solid rgb(222, 222, 222)
+      padding: 5px  0
+      a
+        display: block
+        float: left
+        margin-right: 10px
+        width: 50px
+        height: 50px
+        overflow: hidden
+      p
+        font-size: 14px
+        span
+          color: rgb(145, 193, 19) !important
+        &:last-child
+          margin-bottom: 0
+      span
+        display: block
+        font-size: 14px
+    .zero_b
+
+    .fr_b
+      display: none
+      margin-left: 350px
+      height: 0
+    .sec_b
+      display: none
+      margin-left: 350px
+      height: 0
+      border-bottom: none !important
+    form
+      margin-bottom: 0
+      input
+        margin: 5px 0
+
 .thumbnail.select
   border: 1px solid rgb(145, 193, 19) !important
   box-shadow: -3px 3px 7px rgba(145, 193, 19, 0.4) !important
@@ -1007,3 +986,5 @@ p.price span.red
     border-color: transparent transparent transparent rgb(228, 92, 33) !important
 .viewport
   overflow: hidden
+.tabbable.tabs-left
+  //border-right: 1px solid #dedede
