--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -478,8 +478,10 @@ ul.social
       float: left
       margin: 0 25px 10px 10px
 .catalog_list_nth
-  .span3:nth-child(4n+1)
-    clear: left !important
+  .span9
+
+    .span3:nth-child(3n+1)
+      clear: left !important
 
 
 .shopping_cart_content
@@ -988,3 +990,5 @@ p.price span.red
   overflow: hidden
 .tabbable.tabs-left
   //border-right: 1px solid #dedede
+.margin_clear
+  margin: 0 !important
