--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -96,7 +96,7 @@
                     %i.icon-ok-circle
                     %a{:href => "call:+78008888888", :title => ""} 8 (800) 888 88-88
 
-    #popup.cloth_select
+    #popup.cloth_select.hide
       .popup_name
         Замена ткани
       .content
