--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -859,6 +859,9 @@ p.price span.red
     margin-bottom: 0
 .buy_img
   margin: 0
+
+.cloth_select
+  min-height: 500px
 .cloth_cont_box
   position: relative
   .cloth_cont
@@ -992,7 +995,10 @@ p.price span.red
   //border-right: 1px solid #dedede
 .margin_clear
   margin: 0 !important
-
+.bg_select
+  border: 1px solid rgb(145, 193, 19) !important
+  border-right: none !important
+  color: rgb(145, 193, 19) !important
 #popup
   position: fixed
   top: 2%
