--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -11,7 +11,7 @@
       #top-bar.row
         .span4.logo
           %a{:href => "/"}
-            Mebel<b>S</b>mart
+            Mebelsmart
 
         .span8.options
           %ul.nav.nav-pills.pull-right
@@ -87,7 +87,7 @@
           .span3
             .company_info
               %h4.title
-                %strong WOODSTOK.ru
+                %strong Mebelsmart.com
               %p
                 Россия. Москва.
                 %br
