--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title MyHomeMebel
+    %title Mebelsmart
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
@@ -11,7 +11,8 @@
       #top-bar.row
         .span4.logo
           %a{:href => "/"}
-            <f>M</f>y<f>H</f>ome<f>M</f>ebel
+            Mebelsmart
+            -#<f>M</f>y<f>H</f>ome<f>M</f>ebel
 
         .span8.options
           %ul.nav.nav-pills.pull-right
@@ -122,7 +123,7 @@
           .span3
             .company_info
               %h4.title
-                %strong MebelSmart.com
+                %strong Mebelsmart.com
               %p
                 Россия. Москва.
                 %br
